# testing_HPE_libs

./: .gitignore  README.md  archer2_blas.slurm  archer2_fftw.slurm  archer2_hdf5.slurm  archer2_libsci.slurm  archer2_libsci_c.slurm  archer2_libsci_f90.slurm  archer2_netcdf_hdf5_parallel.slurm  archer2_scalapack.slurm  blas_lapack_test.f90  cblas_lapacke_test.c  full_test.sh  practice.c  serial_hdf5.f90  serial_netcdf.f90  simple_hdf5.cpp
GitLab-examples-MT/: README.md
GitLab-examples-MT/examples/cuda/: GEMM.cu  GEMM_block.cu  dot_product.cu  indexing.cu  reduction.cu  scale.cu
GitLab-examples-MT/examples/matrix/: CMakeLists.txt  csc.hpp  csr.hpp  ddot.cpp  dgefa1.cpp  dgefa2.cpp  dgemv.cpp  matrix_test.cpp
GitLab-examples-MT/examples/mpi/: scalapack.cpp
GitLab-examples-MT/examples/simd/: alignas.hpp  alignas_test.cpp  compile_saxpy_versions.sh  dscal_avx.cpp  isamax_sse.cpp  saxpy-run.sh  saxpy.cpp  saxpy_aligned_gcc.cpp  saxpy_aligned_icc.cpp  saxpy_avx.cpp  saxpy_restrict.cpp  saxpy_simple_avx.cpp  saxpy_simple_gcc.cpp  saxpy_simple_icc.cpp  saxpy_sse.cpp  sdot_sse.cpp  sscal_avx.cpp  sscal_sse.cpp
GitLab-examples-MT/examples/simple_numa/: Makefile  timer.hpp  vector_multiply.cpp  vector_multiply_numa.cpp  vector_multiply_numa_affinity.cpp  vector_multiply_openmp.cpp  vector_multiply_openmp_numa.cpp  vector_multiply_tbb_numa.cpp  vector_multiply_tbb_numa_affinity.cpp  vector_multiply_threaded.cpp
GitLab-examples-MT/exercises/ex07/: myrun
GitLab-examples-MT/resources/intel_intrinsics/: Intrinsics Guide for Intel(R) AVX2.sh
(+73 files in other folders)
