set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp -O3")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
add_executable(matrix_test matrix_test.cpp)
add_library(gemv cblas/dgemv.c cblas/lsame.c cblas/xerbla.c)
add_executable(dgemv-reference dgemv.cpp)
target_link_libraries(dgemv-reference gemv)
add_executable(dgemv-native dgemv.cpp)
if (APPLE)
  target_link_libraries(dgemv-native "-framework veclib")
endif(APPLE)
